@@ -4,6 +4,7 @@ MANIFEST
 README
 lib/Text/KnuthPlass.pm
 t/00-load.t
+t/01-nodes.t
 t/pod-coverage.t
 t/pod.t
 Makefile.PL
