@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Text-KnuthPlass
-version:            0.02
+version:            0.03
 abstract:           ~
 author:  []
 license:            unknown
