@@ -1,4 +1,11 @@
+2011-02-09  Simon Cozens <simon@simon-cozens.org>
+
+  * lib/Text/KnuthPlass.pm, t/01-nodes.t, t/02-javascript.t, t/03-center.t:
+  Many, many corrections to the algorithm after studying the Javascript more.
+
 2011-02-08  Simon Cozens <simon@simon-cozens.org>
+
+  * MANIFEST, t/01-nodes.t: Oops, forgot these.
 
   * lib/Text/KnuthPlass.pm: Demodernify, up the version number.
 
